tg-882. [BE] [BackofficeSector]Configurar permissionValidator para tener en cuenta el idInstitucion

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -89,3 +89,23 @@ app.data.sample.healthcareProfessionals[1].id=2
 app.data.sample.healthcareProfessionals[1].licenseNumber=1234
 app.data.sample.healthcareProfessionals[1].personId=3
 app.data.sample.healthcareProfessionals[1].isMedicalDoctor=false
+
+############### Administrativo institutional
+app.data.sample.people[3].id = 5
+app.data.sample.people[3].firstName = Juan
+app.data.sample.people[3].lastName = AdminInstitucional
+
+app.data.sample.users[3].id=5
+app.data.sample.users[3].username=administradorinstitucional@example.com
+app.data.sample.users[3].enable=true
+app.data.sample.users[3].audit.deleted=false
+app.data.sample.users[3].personId=5
+
+app.data.sample.userPasswords[3].id=5
+app.data.sample.userPasswords[3].password=$2a$10$ZfZzEqmOdqoCYDo89WquI.SbQsK9cteN6E4rGmsF0qMUdbcGBw6O6
+app.data.sample.userPasswords[3].salt=salt
+app.data.sample.userPasswords[3].hashAlgorithm=hashAlgorithm
+
+app.data.sample.userRoles[3].userId=5
+app.data.sample.userRoles[3].roleId=8
+app.data.sample.userRoles[3].institutionId=1
