--- a/sgh-ansible/hosts-docker.yml
+++ b/sgh-ansible/hosts-docker.yml
@@ -18,3 +18,13 @@ all:
             hosts:
                 postgres: 
                     ansible_connection: docker
+            vars:
+                database_su_name: postgres
+                database_su_password: Local123
+                # crear usuario con otro nombre via socket
+                # postgresql_users:
+                #     - name: sgh2020
+                #       password: sgh2020
+                #       login_unix_socket: /var/postgres/pg.socket
+vars:
+    ansible_ssh_pipelining: true
