tg-860 Separa playbooks de nodos en instalación y deploy

--- a/sgh-ansible/3-sghservers.yml
+++ b/sgh-ansible/3-sghservers.yml
@@ -2,11 +2,10 @@
   - hosts: databases
     roles:
          - role : database
-        #  - role : migrate
   - hosts: frontservers
     roles:
       - role: nginx
-      - role: sgh-front
+  - hosts: backservers
+    roles:
       - role: tomcat
-      - role: sgh-back
 
