tg-911. [BE] Ajustar paginado para tener en cuenta los permisos por institución

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -21,6 +21,7 @@ app.data.sample.institutions[0].sisaCode=BB
 app.data.sample.people[0].id = 1
 app.data.sample.people[0].firstName = Juan
 app.data.sample.people[0].lastName = Administrativo
+app.data.sample.people[0].identificationNumber = 1
 
 app.data.sample.users[0].id=2
 app.data.sample.users[0].username=administrativo@example.com
@@ -42,6 +43,7 @@ app.data.sample.userRoles[0].institutionId=1
 app.data.sample.people[1].id = 2
 app.data.sample.people[1].firstName = Juan
 app.data.sample.people[1].lastName = EspecialistaMedico
+app.data.sample.people[1].identificationNumber = 2
 
 app.data.sample.users[1].id=3
 app.data.sample.users[1].username=especialista@example.com
@@ -69,6 +71,7 @@ app.data.sample.healthcareProfessionals[0].isMedicalDoctor=true
 app.data.sample.people[2].id = 3
 app.data.sample.people[2].firstName = Juan
 app.data.sample.people[2].lastName = ProfesionaSalud
+app.data.sample.people[2].identificationNumber = 3
 
 app.data.sample.users[2].id=4
 app.data.sample.users[2].username=profesionalsalud@example.com
@@ -94,6 +97,7 @@ app.data.sample.healthcareProfessionals[1].isMedicalDoctor=false
 app.data.sample.people[3].id = 5
 app.data.sample.people[3].firstName = Juan
 app.data.sample.people[3].lastName = AdminInstitucional
+app.data.sample.people[3].identificationNumber = 4
 
 app.data.sample.users[3].id=5
 app.data.sample.users[3].username=administradorinstitucional@example.com
