Comienza desarrollo de 0.4

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -24,3 +24,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v0_3.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v0_4.yml
+    relativeToChangelogFile: true
