--- a/dba/liquibase/incrementales-v0_4.yml
+++ b/dba/liquibase/incrementales-v0_4.yml
@@ -1,5 +1,5 @@
 databaseChangeLog: 
-- logicalFilePath: incrementales-v0_2 
+- logicalFilePath: incrementales-v0_4
 
 - changeSet:
     id: outpatient_consultation-createTable
@@ -176,3 +176,42 @@ databaseChangeLog:
             sql: |-
                 INSERT INTO source_type VALUES (0, 'Internación');
                 INSERT INTO source_type VALUES (1, 'Ambulatoria');              
+- changeSet:  
+    id:  dropView-v-institution  
+    author:  saguero 
+    changes:  
+    -  dropView:    
+        schemaName:  public  
+        viewName:  v_institution
+
+- changeSet:   
+    id:  createView-v-institution-V2-postgresql  
+    author:  saguero
+    dbms: postgresql
+    changes:  
+    -  createView: 
+        viewName:  v_institution 
+        fullDefinition:  false    
+        replaceIfExists:  true  
+        schemaName:  public  
+        selectQuery: |-
+            select	distinct ie.institution_id, ie.id as "internment_episode_id", ad.longitud, ad.latitud, diagnosis.covid_presumptive 					
+            from 	internment_episode ie 
+            join    institution i on ( ie.institution_id = i.id )
+            join    address ad on i.address_id = ad.id 
+            join    bed b on ie.bed_id = b.id
+            left join lateral( 	
+                select 	case when hc.verification_status_id = '76104008' then true else false end as "covid_presumptive"
+                from 	document_health_condition dhc 
+                        join document d on ( dhc.document_id = d.id)
+                        join internment_episode ieSub on ( d.internment_episode_id = ieSub.id )
+                        join health_condition hc on ( dhc.health_condition_id = hc.id )
+                where 	ieSub.institution_id = i.id
+                        and ieSub.id = ie.id
+                        and hc.sctid_code = '186747009'
+                order by hc.updated_on desc
+                limit	1
+                        
+            ) as diagnosis on true
+            where 	ie.status_id = 1 
+                    and b."free" = false
