tg-967 agregar columna probable discharge date a internment episode

--- a/dba/liquibase/incrementales-v0_4.yml
+++ b/dba/liquibase/incrementales-v0_4.yml
@@ -284,4 +284,16 @@ databaseChangeLog:
     - dropForeignKeyConstraint:
         baseTableName: document
         constraintName: FK_document_internment_episode_id
-        
+
+- changeSet:  
+    id: internment_episode-addColumn-probable_discharge_date
+    author: edipietro
+    changes:
+    - addColumn:
+        columns:
+        - column:
+            name: probable_discharge_date
+            type: datetime
+            constraints:
+                nullable: true
+        tableName: internment_episode
