tg-1035 Ajuste de documentacion Ansible para Deploy

--- a/sgh-ansible/liquibase.properties
+++ b/sgh-ansible/liquibase.properties
@@ -3,6 +3,7 @@ promptOnNonLocalDatabase=false
 changeLogFile=liquibase/main.yml
 
 outputFileEncoding=UTF-8
+#Cambiar localhost por IP de BBDD 
 url=jdbc:postgresql://localhost:5432/sgh
 username=sgh
 password=sgh
