tg-1125. [BE] Generar documento de ambulatoria

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -110,5 +110,5 @@ google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
 google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
 
 # Documentos de internacion
-internment.document.directory = temp
+internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY:temp}
 
