--- a/dba/liquibase/incrementales-v0_5.yml
+++ b/dba/liquibase/incrementales-v0_5.yml
@@ -1384,3 +1384,179 @@ databaseChangeLog:
         referencedColumnNames: id
         referencedTableName: appointment
         validate: true
+
+
+- changeSet:
+    id: procedures table
+    author: etrapani
+    changes: 
+    - createTable: 
+        tableName: procedures_status
+        columns: 
+        - column:
+            constraints:
+                primaryKey: true
+                primaryKeyName: PK_procedures_status
+            name: id
+            type: varchar(20)
+        - column:
+            constraints:
+                nullable: false
+            name: description
+            type: varchar(100)
+    - createTable: 
+        tableName: procedures
+        columns: 
+        - column:
+            autoIncrement: true
+            constraints:
+                primaryKey: true
+                primaryKeyName: PK_procedures
+            name: id
+            type: int
+        - column:
+            constraints:
+                nullable: false
+            name: patient_id
+            type: int
+        - column:
+            constraints:
+                nullable: false
+            name: sctid_code
+            type: varchar(20)
+        - column:
+            constraints:
+                nullable: false
+            name: status_id
+            type: varchar(20)
+        - column:
+            constraints:
+                nullable: true
+            name: note_id
+            type: bigint    
+        - column:
+            constraints:
+                nullable: false
+            name: performed_date
+            type: date        
+            defaultValueDate: ${date.now}    
+        - column:
+            constraints:
+                nullable: false
+            name: created_by
+            type: int
+            defaultValue: -1
+        - column:
+            constraints:
+                nullable: false
+            name: updated_by
+            type: int
+            defaultValue: -1
+        - column:
+            constraints:
+                nullable: false
+            name: created_on
+            type: datetime
+            defaultValueDate: ${date.now}
+        - column:
+            constraints:
+                nullable: false
+            name: updated_on
+            type: datetime
+            defaultValueDate: ${date.now}   
+    - addForeignKeyConstraint:
+        baseColumnNames: patient_id
+        baseTableName: procedures
+        constraintName: FK_procedures_patient_id
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: patient
+        validate: true
+    - addForeignKeyConstraint:
+        baseColumnNames: status_id
+        baseTableName: procedures
+        constraintName: FK_procedures_status_id
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: procedures_status
+        validate: true  
+    - addForeignKeyConstraint:
+        baseColumnNames: sctid_code
+        baseTableName: procedures
+        constraintName: FK_procedures_sctid_code
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: snomed
+        validate: true  
+    - addForeignKeyConstraint:
+        baseColumnNames: note_id
+        baseTableName: procedures
+        constraintName: FK_procedures_note_id
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: note
+        validate: true   
+    - createIndex:
+        columns:
+        - column:
+            name: patient_id
+        indexName: IDX_procedures_patient_id
+        tableName: procedures
+    - createTable: 
+        tableName: document_procedure
+        columns: 
+        - column:
+            constraints:
+                nullable: false
+            name: procedure_id
+            type: int
+        - column:
+            constraints:
+                nullable: false
+            name: document_id
+            type: bigint
+    - addPrimaryKey:
+        clustered: true
+        columnNames: document_id, procedure_id
+        constraintName: PK_document_procedure
+        tableName: document_procedure
+        validate: true
+    - addForeignKeyConstraint:
+        baseColumnNames: document_id
+        baseTableName: document_procedure
+        constraintName: FK_document_procedure_document_id
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: document
+        validate: true 
+    - addForeignKeyConstraint:
+        baseColumnNames: procedure_id
+        baseTableName: document_procedure
+        constraintName: FK_document_procedure_procedure_id
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: procedures
+        validate: true 
+
+- changeSet: 
+    id: procedures_status-metadata
+    comment: Add data
+    author: etrapani
+    context: "!schema-only"
+    changes: 
+        - sql: 
+            sql: |- 
+                INSERT INTO procedures_status (id, description) VALUES('367559008', 'Planificado');  
+                INSERT INTO procedures_status (id, description) VALUES('385651009', 'Activo');  
+                INSERT INTO procedures_status (id, description) VALUES('385660001', 'Abandonado');        
+                INSERT INTO procedures_status (id, description) VALUES('385655000', 'Suspendida');        
+                INSERT INTO procedures_status (id, description) VALUES('385654001', 'Detenido');           
+                INSERT INTO procedures_status (id, description) VALUES('255594003', 'Completado');        
+                INSERT INTO procedures_status (id, description) VALUES('723510000', 'Ingresado por error');   
+                INSERT INTO procedures_status (id, description) VALUES('261665006', 'Desconocido');   
