tg-1190. [FE/BE] Agregar permisos en la aplicación de vacunas (solo enfermeros)

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -113,3 +113,24 @@ app.data.sample.userPasswords[3].hashAlgorithm=hashAlgorithm
 app.data.sample.userRoles[3].userId=5
 app.data.sample.userRoles[3].roleId=8
 app.data.sample.userRoles[3].institutionId=1
+
+############### Administrativo institutional
+app.data.sample.people[4].id = 6
+app.data.sample.people[4].firstName = Juan
+app.data.sample.people[4].lastName = Enfermero
+app.data.sample.people[4].identificationNumber = 5
+
+app.data.sample.users[4].id=6
+app.data.sample.users[4].username=enfermero@example.com
+app.data.sample.users[4].enable=true
+app.data.sample.users[4].audit.deleted=false
+app.data.sample.users[4].personId=6
+
+app.data.sample.userPasswords[4].id=6
+app.data.sample.userPasswords[4].password=$2a$10$ZfZzEqmOdqoCYDo89WquI.SbQsK9cteN6E4rGmsF0qMUdbcGBw6O6
+app.data.sample.userPasswords[4].salt=salt
+app.data.sample.userPasswords[4].hashAlgorithm=hashAlgorithm
+
+app.data.sample.userRoles[4].userId=6
+app.data.sample.userRoles[4].roleId=7
+app.data.sample.userRoles[4].institutionId=1
