tg-1191. [P1] Error 400 al aplicar vacuna con usuario que no sea profesional

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -114,7 +114,7 @@ app.data.sample.userRoles[3].userId=5
 app.data.sample.userRoles[3].roleId=8
 app.data.sample.userRoles[3].institutionId=1
 
-############### Administrativo institutional
+############### Enfermero
 app.data.sample.people[4].id = 6
 app.data.sample.people[4].firstName = Juan
 app.data.sample.people[4].lastName = Enfermero
@@ -134,3 +134,8 @@ app.data.sample.userPasswords[4].hashAlgorithm=hashAlgorithm
 app.data.sample.userRoles[4].userId=6
 app.data.sample.userRoles[4].roleId=7
 app.data.sample.userRoles[4].institutionId=1
+
+app.data.sample.healthcareProfessionals[2].id=3
+app.data.sample.healthcareProfessionals[2].licenseNumber=1234
+app.data.sample.healthcareProfessionals[2].personId=6
+app.data.sample.healthcareProfessionals[2].isMedicalDoctor=false
