tg-1080 [FE] Calendario en pantalla de nueva agenda

--- a/front-end/webapp/angular.json
+++ b/front-end/webapp/angular.json
@@ -29,6 +29,7 @@
 							"src/manifest.webmanifest"
 						],
 						"styles": [
+							"node_modules/angular-calendar/css/angular-calendar.css",
 							"src/styles.scss"
 						],
 						"scripts": []
@@ -97,6 +98,7 @@
 							"src/manifest.webmanifest"
 						],
 						"styles": [
+							"node_modules/angular-calendar/css/angular-calendar.css",
 							"src/styles.scss"
 						],
 						"scripts": []
