--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -29,7 +29,9 @@
 		"@ngx-translate/core": "^12.1.2",
 		"@ngx-translate/http-loader": "^4.0.0",
 		"@types/file-saver": "^2.0.1",
+		"angular-calendar": "^0.28.16",
 		"angular-file-saver": "^1.1.3",
+		"date-fns": "^2.14.0",
 		"moment": "^2.24.0",
 		"ng-recaptcha": "^5.0.0",
 		"ngx-moment": "^3.5.0",
