--- a/sgh-ansible/5-deploy.yml
+++ b/sgh-ansible/5-deploy.yml
@@ -6,6 +6,8 @@
   - hosts: frontservers
     roles:
       - role: sgh-front
+        become: yes
   - hosts: backservers
     roles:
       - role: sgh-back
+        become: yes
