--- a/sgh-ansible/hosts-docker.yml
+++ b/sgh-ansible/hosts-docker.yml
@@ -1,4 +1,11 @@
-all:
+all: 
+    hosts:
+        postgres_master: 
+            ansible_host: postgres
+            database_port: 5432
+            ansible_connection: docker
+            database_su_name: postgres
+            database_su_password: Local123
     children:
         web_load_balancers:
             hosts:
@@ -16,15 +23,9 @@ all:
                 nodo_b:
         databases:
             hosts:
-                postgres: 
-                    ansible_connection: docker
-            vars:
-                database_su_name: postgres
-                database_su_password: Local123
-                # crear usuario con otro nombre via socket
-                # postgresql_users:
-                #     - name: sgh2020
-                #       password: sgh2020
-                #       login_unix_socket: /var/postgres/pg.socket
-vars:
-    ansible_ssh_pipelining: true
+                postgres_master: 
+    vars:
+        ansible_ssh_pipelining: yes
+        sgh_database_user_name: sgh_test
+        sgh_database_user_password: sgh_test
+        sgh_database_name: sgh_test
