--- a/sgh-ansible/hosts-template.yml
+++ b/sgh-ansible/hosts-template.yml
@@ -1,4 +1,10 @@
 all:
+    hosts:
+        postgres_master: 
+            ansible_host: IP
+            database_su_name: postgres
+            database_port: 5432
+            database_su_password: Local123
     children:
         web_load_balancers:
             hosts:
@@ -21,5 +27,5 @@ all:
             vars:
                 database_su_name: toBeChanged
                 database_su_password: toBeChanged
-vars:
-    ansible_ssh_pipelining: true
+    vars:
+        ansible_ssh_pipelining: true
