tg-1158 Renombre server front

--- a/sgh-ansible/roles/sgh-front/tasks/sgh-setup-front.yml
+++ b/sgh-ansible/roles/sgh-front/tasks/sgh-setup-front.yml
@@ -18,7 +18,7 @@
 - name: copy properties for SGH
   template: 
     src: templates/nginx.conf.j2
-    dest: "/etc/nginx/sites-enabled/"
+    dest: "/etc/nginx/sites-enabled/sgh-front.conf"
     owner:  www-data
     group: www-data
     mode: 0644
