--- a/sgh-ansible/hosts-template-ha.yml
+++ b/sgh-ansible/hosts-template-ha.yml
@@ -2,9 +2,8 @@ all:
     hosts:
         postgres_master: 
             ansible_host: IP
-            database_su_name: postgres
-            database_port: 5432
-            database_su_password: Local123
+            database_su_name: toBeChanged
+            database_su_password: toBeChanged
     children:
         web_load_balancers:
             hosts:
@@ -20,12 +19,13 @@ all:
             hosts:
                 nodo_a:
                 nodo_b:
-        databases:
+        migrator:
             hosts:
-                localhost: 
+                localhost: # debe poseer Maven instalado
                     ansible_connection: local
-            vars:
-                database_su_name: toBeChanged
-                database_su_password: toBeChanged
     vars:
         ansible_ssh_pipelining: true
+        database_port: 5432
+        sgh_database_user_name: sgh_test
+        sgh_database_user_password: sgh_test
+        sgh_database_name: sgh_test
