--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -139,3 +139,29 @@ app.data.sample.healthcareProfessionals[2].id=3
 app.data.sample.healthcareProfessionals[2].licenseNumber=1234
 app.data.sample.healthcareProfessionals[2].personId=5
 app.data.sample.healthcareProfessionals[2].isMedicalDoctor=false
+
+############### ADMINISTRADOR AGENDA
+app.data.sample.people[5].id = 6
+app.data.sample.people[5].firstName = Juan
+app.data.sample.people[5].lastName = Administrador agenda
+app.data.sample.people[5].identificationNumber = 6
+
+app.data.sample.users[5].id=7
+app.data.sample.users[5].username=administradoragenda@example.com
+app.data.sample.users[5].enable=true
+app.data.sample.users[5].audit.deleted=false
+app.data.sample.users[5].personId=6
+
+app.data.sample.userPasswords[5].id=7
+app.data.sample.userPasswords[5].password=$2a$10$ZfZzEqmOdqoCYDo89WquI.SbQsK9cteN6E4rGmsF0qMUdbcGBw6O6
+app.data.sample.userPasswords[5].salt=salt
+app.data.sample.userPasswords[5].hashAlgorithm=hashAlgorithm
+
+app.data.sample.userRoles[5].userId=7
+app.data.sample.userRoles[5].roleId=9
+app.data.sample.userRoles[5].institutionId=1
+
+app.data.sample.healthcareProfessionals[3].id=4
+app.data.sample.healthcareProfessionals[3].licenseNumber=1234
+app.data.sample.healthcareProfessionals[3].personId=6
+app.data.sample.healthcareProfessionals[3].isMedicalDoctor=false
